src/styles/modules/member_card.module.css
@value primary, secondary, white, background, yellow, blue, login, login-border from '../constants/color.css';

@value font-size-14,line-height-14, letter-spacing-14, font-size-18, line-height-18,letter-spacing-18 from '../constants/typography.css';

@value card-shadow from '../constants/box-shadow.css';

.memberListWrap {
  position: relative;
  height: 100%;
  overflow-y: auto;
}

.memberList {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  border-radius: 22px;
}

.memberListWrap::-webkit-scrollbar {
  display: none !important;
}

.meberItem {
  flex-grow: 1;
  margin-bottom: 10px;
  width: 220px;
}

.card {
  display: flex;
  flex-direction: column;
  margin-right: 8px;
  padding: 22px;
  background-color: white;
  border-radius: 22px;
  transition: box-shadow 300ms ease-in-out, transform 300ms ease-in-out;
}

.card:active {
  box-shadow: card-shadow;
  transform: translate3d(0px, -0.25rem, 0px);
}

.cardHeader {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin-bottom: 42px;
}

.dot {
  margin-right: 8px;
  width: 14px;
  height: 14px;
  background-color: login;
  border: 2px solid login-border;
  border-radius: 50%;
}

.loginTime {
  font-size: font-size-14;
  line-height: line-height-14;
  letter-spacing: letter-spacing-14;
  color: secondary;
}

.cardContents {
  position: relative;
  margin: 0 -22px;
  padding: 64px 22px 22px;
}

.cardContents.isGray {
  background-color: background;
}

.cardContents.isYellow {
  background-color: yellow;
}

.cardContents.isBlue {
  background-color: blue;
}

.profile {
  position: absolute;
  top: -24px;
  left: 22px;
  border-radius: 20px;
}

.profile img {
  width: 70px;
  height: 70px;
  border-radius: 20px;
  object-fit: cover;
}

.authName {
  font-size: font-size-18;
  line-height: line-height-18;
  letter-spacing: letter-spacing-18;
  color: primary;
}

.authMsg {
  font-size: font-size-14;
  line-height: line-height-14;
  letter-spacing: letter-spacing-14;
  color: primary;
  word-break: break-all;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.cardFooter {
  margin-top: 22px;
}

.authDetailItem {
  display: flex;
}

.title,
.description {
  font-size: font-size-14;
  line-height: line-height-14;
  letter-spacing: letter-spacing-14;
}

.title {
  flex-basis: 40%;
  color: secondary;
}

.description {
  flex-grow: 1;
  color: primary;
}

@media screen and (min-width: 768px) {
  .memberList {
    justify-content: space-between;
    padding: 10px;
  }

  .card:hover {
    box-shadow: card-shadow;
    transform: translate3d(0px, -0.25rem, 0px);
  }

  .meberItem {
    flex-grow: 0;
  }
}

